<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="connection_service_name" translatable="false">Voice Call Service</string>
    <string name="phone_account_name" translatable="false" />
    <string name="phone_account_desc" translatable="false" />
    <string name="incoming_call_title">Incoming call</string>
    <string name="call_accept">Accept</string>
    <string name="call_decline">Decline</string>
    <string name="unknown_caller">Unknown caller</string>
    <string name="call_mute">Mute</string>
    <string name="call_speaker">Speaker</string>
    <string name="call_audio_output">Audio</string>
    <string name="call_audio_output_title">Audio output</string>
    <string name="call_keypad">Keypad</string>
    <string name="call_keypad_hide">Hide keypad</string>
    <string name="call_end_call">End call</string>
    <string name="call_missed_title">Missed call</string>
</resources>